Improve the documentation #1
